--- a/setup.cfg
+++ b/setup.cfg
@@ -22,6 +22,7 @@ install_requires =
     torchvision
     tqdm
     biopython
+    axial_attention #get rid of this and replace with optimized custom stuff
 
 [options.packages.find]
 [options.extras_require]
