Added pytorch-lightning to setup.py

--- a/setup.cfg
+++ b/setup.cfg
@@ -23,6 +23,7 @@ install_requires =
     tqdm
     biopython
     axial_attention #get rid of this and replace with optimized custom stuff
+    pytorch-lightning 
 
 [options.packages.find]
 [options.extras_require]
