added lightning bolts to dependenvies

--- a/setup.cfg
+++ b/setup.cfg
@@ -24,6 +24,7 @@ install_requires =
     biopython
     axial_attention #get rid of this and replace with optimized custom stuff
     pytorch-lightning 
+    lightning-bolts
 
 [options.packages.find]
 [options.extras_require]
