Set requirements to torch 1.10

--- a/setup.cfg
+++ b/setup.cfg
@@ -18,7 +18,7 @@ include_package_data = True
 package_dir =
     =.
 install_requires =
-    torch
+    torch >= 1.10
     torchvision
     tqdm
     biopython
