Added deepspeed zero dp strategies

--- a/setup.cfg
+++ b/setup.cfg
@@ -25,6 +25,7 @@ install_requires =
     axial_attention #get rid of this and replace with optimized custom stuff
     pytorch-lightning 
     lightning-bolts
+    deepspeed
 
 [options.packages.find]
 [options.extras_require]
