Added cvxpy dependency

--- a/setup.cfg
+++ b/setup.cfg
@@ -26,6 +26,7 @@ install_requires =
     pytorch-lightning 
     lightning-bolts
     deepspeed
+    cvxpy
 
 [options.packages.find]
 [options.extras_require]
