Fixed dependencies and imports

--- a/setup.cfg
+++ b/setup.cfg
@@ -27,6 +27,8 @@ install_requires =
     lightning-bolts
     deepspeed
     cvxpy
+    seaborn
+    matplotlib
 
 [options.packages.find]
 [options.extras_require]
