Fixed CI error by downgrading protobuf lib

--- a/setup.cfg
+++ b/setup.cfg
@@ -18,6 +18,7 @@ include_package_data = True
 package_dir =
     =.
 install_requires =
+    protobuf < 4.21.0  # higher versions lead to errors with pytorch-lightning (https://github.com/PyTorchLightning/pytorch-lightning/issues/13159)
     torch >= 1.10
     torchvision
     tqdm
