--- a/.gitignore
+++ b/.gitignore
@@ -127,7 +127,7 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
-
+selbstaufsicht/datasets/challenge*
 scripts/lightning_logs*
 scripts/xgb_logs
 *.out
