--- a/setup.cfg
+++ b/setup.cfg
@@ -21,12 +21,13 @@ install_requires =
     protobuf < 4.21.0  # higher versions lead to errors with pytorch-lightning (https://github.com/PyTorchLightning/pytorch-lightning/issues/13159)
     torch >= 1.10, <= 1.13.1  # range supported by pytorch-lightning 1.8.x
     torchvision
+    tensorboard
     tqdm
     biopython
     axial_attention #get rid of this and replace with optimized custom stuff
     pytorch-lightning == 1.8.6  # lightning-bolts breaks for higher versions
     lightning-bolts
-    cvxpy
+    cvxpy== 1.3.0  # breaks with higher versions
     seaborn
     matplotlib
     scikit-learn
