Removed version constraint on cvxpy

--- a/setup.cfg
+++ b/setup.cfg
@@ -27,7 +27,7 @@ install_requires =
     axial_attention #get rid of this and replace with optimized custom stuff
     pytorch-lightning == 1.8.6  # lightning-bolts breaks for higher versions
     lightning-bolts
-    cvxpy== 1.3.0  # breaks with higher versions
+    cvxpy
     seaborn
     matplotlib
     scikit-learn
